--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 	<div id="textforhouse"></div>
 	<!-- Hér koma niðurstöðurnar -->
     <div class="grid-container">
-        <div class="grid-item" id="dates_gray_div"><h6>Grátunnur - Dagsetningar:</h6><ul id="dates_gray_list"></ul></div>
-        <div class="grid-item" id="dates_blue_div"><h6>Blátunnur - Dagsetningar:</h6><ul id="dates_blue_list"></ul></div>
-        <div class="grid-item" id="dates_green_div"><h6>Græntunnur - Dagsetningar:</h6><ul id="dates_green_list"></ul></div>
+        <div class="grid-item" id="dates_gray_div"><h6>Almennt rusl - Dagsetningar:</h6><ul id="dates_gray_list"></ul></div>
+        <div class="grid-item" id="dates_blue_div"><h6>Pappatunnur - Dagsetningar:</h6><ul id="dates_blue_list"></ul></div>
+        <div class="grid-item" id="dates_green_div"><h6>Plasttunnur - Dagsetningar:</h6><ul id="dates_green_list"></ul></div>
     </div>
 </body>
 </html> 
