--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div>
 		<!-- Allt sem viðkemur input -->
-        <label for="address"><h5>Sláðu inn götuheiti:</h5></label>
+        <label for="address"><h5>Sláðu inn götu- eða bæjarheiti:</h5></label>
         <input class="form-control" type="text" name="address" id="address" /> <br/>
         <button class="btn btn-primary btn active" type="submit" id="myBtn" onclick="get_dates_for_address()">Finna sorphirðudaga</button>
 		<!-- Script lætur vera að hægt er að ýta á enter í stað þess að ýta á takkann. -->
@@ -29,9 +29,9 @@
 	<!-- Hér koma niðurstöðurnar -->
     <div id="textforhouse"></div>
     <div class="grid-container">
-        <div class="grid-item" id="dates_gray_div"><h6>Grátunnur - Dagsetningar:</h6><ul id="dates_gray_list"></ul></div>
-        <div class="grid-item" id="dates_blue_div"><h6>Blátunnur - Dagsetningar:</h6><ul id="dates_blue_list"></ul></div>
-        <div class="grid-item" id="dates_green_div"><h6>Græntunnur - Dagsetningar:</h6><ul id="dates_green_list"></ul></div>
+        <div class="grid-item" id="dates_gray_div"><h6>Almennt rusl - grátunnur - Dagsetningar:</h6><ul id="dates_gray_list"></ul></div>
+        <div class="grid-item" id="dates_blue_div"><h6>Pappi - blátunnur - Dagsetningar:</h6><ul id="dates_blue_list"></ul></div>
+        <div class="grid-item" id="dates_green_div"><h6>Plast -græntunnur - Dagsetningar:</h6><ul id="dates_green_list"></ul></div>
     </div>
 </body>
 </html> 
