--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 });
             </script>
 	</div><br/>
-		<p><strong>Fyrirvari: </strong></p><p>Líta skal á sorphirðudagatalið sem viðmiðunardagatal.  Veðurfar, veikindi og bilanir geta haft áhrif en almennt ætti ekki að skeika meiru en 1/2 til 1 degi á sorphirðu milli hverfa.</p><br/>
+		<p><strong>Fyrirvari: </strong></p><p>Líta skal á sorphirðudagatalið sem viðmiðunardagatal.  Veðurfar, veikindi og bilanir geta haft áhrif en almennt ætti ekki að skeika meiru en 1/2 til 1 degi á sorphirðu milli hverfa. Í Mývatnssveit kemur sorphirðubíll ýmist á þriðjudegi eða miðvikudegi, en dagsetningin miðar við þriðjudag.</p><br/>
 	<!-- Hér koma niðurstöðurnar -->
     <div id="textforhouse"></div>
     <div class="grid-container">
