--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Sorphirðu dagatal</title>
     <script src="trashdate.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
    
 </head>
 <body>
